[views] fix /admin/admissions check all students after adding new applicant

--- a/admissions/app/views/gaku/admin/admissions/_students_list.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_students_list.html.slim
@@ -21,7 +21,7 @@
 
 
 javascript:
-  $('#all_students_check').change(function(){
+  $('.change-state-form').on('change', '#all_students_check', function(){
     if (this.checked) {
       $('.student-check').prop('checked', true);
     }else{
