--- a/core/app/views/gaku/exams/exam_portions/update.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/update.js.erb
@@ -1,10 +1,6 @@
 $('tr#exam_portion_<%= @exam_portion.id %>').html('<%= render_js_partial("gaku/exams/exam_portions/exam_portion_unit", {:exam_portion => @exam_portion}) %>');
 $("#edit-exam-exam-portion-modal").modal('hide');
 $('input#<%= @exam_portion.id %>.exam-portion-weight').val('<%= @exam_portion.weight %>')
-showNotice("<%= render_flash %>");
+// showNotice("<%= render_flash %>");
 
-var sum = 0;
-    $('.exam-portion-weight').each(function() {
-        sum += Number($(this).val());
-    });
-$('#weight-total').text(sum);
+$('#weight-total').text(<%= @exam.total_weight %>);
