Clean student edit_table

--- a/core/app/views/gaku/students/simple_grades/_simple_grades.html.slim
+++ b/core/app/views/gaku/students/simple_grades/_simple_grades.html.slim
@@ -1,2 +1,2 @@
 span#student-simple-grades-list style='margin-right:3px'
-  = link_to simple_grades_show(@student.simple_grades), [@student, :simple_grades], :id => 'index-student-simple-grades-link', :remote => true
+  = link_to simple_grades_show(@student.simple_grades), [@student, :simple_grades], :id => 'simple-grades', :remote => true
