--- a/core/app/views/gaku/students/student_achievements/_student_achievements.html.slim
+++ b/core/app/views/gaku/students/student_achievements/_student_achievements.html.slim
@@ -1,2 +1,2 @@
 span#student-achievements-list style='margin-right:3px'
-  = link_to achievements_show(@student.achievements), [@student, :student_achievements], :id => 'index-student-achievements-link', :remote => true
+  = link_to achievements_show(@student.achievements), [@student, :student_achievements], :id => 'achievements', :remote => true
