--- a/core/app/views/gaku/students/_edit_table.html.slim
+++ b/core/app/views/gaku/students/_edit_table.html.slim
@@ -14,47 +14,44 @@
       tr
         th.btn-c2 = t(:'admitted')
         td#admitted
-
+          = student.admitted
 
       tr
-        th.btn-c2 = t(:'enrollment_status.singular')
-        td.vm
-          a#edit-enrollment-status.editable href="#" data-resource="student" data-name="enrollment_status_id" data-type="select" data-url="#{student_path(student.id)}"
+        th = t(:'enrollment_status.singular')
+        td
+          a#enrollment-status.editable href="#" data-resource="student" data-name="enrollment_status_id" data-type="select" data-url="#{student_path(student.id)}"
             = student.enrollment_status
 
       tr
-        th.btn-c2 = t(:'scholarship_status')
+        th = t(:'scholarship_status')
         td
-          a#edit-scholarship-status.editable href="#" data-resource="student" data-name="scholarship_status_id" data-type="select" data-url="#{student_path(student.id)}"
+          a#scholarship-status.editable href="#" data-resource="student" data-name="scholarship_status_id" data-type="select" data-url="#{student_path(student.id)}"
             = student.scholarship_status
       tr
-        th.btn-c2 = t(:'commute_method.singular')
+        th = t(:'commute_method.singular')
         td
           a#commute-method-type.editable href="#" data-resource="student" data-name="commute_method_type_id" data-type="select" data-url="#{student_path(student.id)}"
             = student.commute_method_type
 
       tr
-        th.btn-c2 = t(:'specialty.singular')
+        th = t(:'specialty.singular')
         td
           #student-enrollment-status
             = render 'gaku/students/student_specialties/student_specialties', :student => student
       tr
-        th.btn-c2 = t(:'simple_grade.singular')
+        th = t(:'simple_grade.singular')
         td
           #student-simple-grade
             = render 'gaku/students/simple_grades/simple_grades', :student => student
       tr
-        th.btn-c2 = t(:'achievement.singular')
+        th = t(:'achievement.singular')
         td
           #student-achievement
             = render 'gaku/students/student_achievements/student_achievements', :student => student
 
 javascript:
-  var enrollment_types = #{ @enrollments.to_json.html_safe }
-  var scholarship_statuses = #{ @sch.to_json.html_safe }
-
   $('#commute-method-type').inline_select(#{ commute_method_types_inline });
-  $('#edit-enrollment-status').inline_select(enrollment_types);
-  $('#edit-scholarship-status').inline_select(scholarship_statuses);
+  $('#enrollment-status').inline_select(#{ enrollment_statuses_inline });
+  $('#scholarship-status').inline_select(#{ scholarship_statuses_inline });
   $('#birth_date').inline_date();
 
