Move some of the students views to gaku/shared/student

--- a/core/app/views/gaku/students/show.html.slim
+++ b/core/app/views/gaku/students/show.html.slim
@@ -1,13 +1,1 @@
-- present @student do |student_presenter|
-  = well_div do
-    .span9.student-index
-      = render 'show_table', :student => @student
-
-    .span3.well
-      = render 'gaku/shared/picture', :resource => @student
-
-  = render :partial => 'tabs'
-
-  = well_div do
-    .span4
-      = link_to_back students_path, :class => "span12 btn"
+= render 'gaku/shared/student/show', :student => @student
