WIP : Fixes to students views

--- a/core/app/views/gaku/shared/student/_edit.html.slim
+++ b/core/app/views/gaku/shared/student/_edit.html.slim
@@ -14,22 +14,15 @@
   = render :partial => 'gaku/shared/student/tabs'
 
   = well_div do
-    .span4
-      = link_to t(:'enroll_to_class'), [:new, @student, :class_group_enrollment], { :id => 'enroll-student-link', :class => "span12 btn btn-primary", :remote => true }
-    .span4
+    .span5
       = link_to_edit_with_text [:edit, @student], :class => "span12 btn btn-warning edit-link", :remote => true
-    .span4
+    .span5
       = link_to_back students_path, :class => "span12 btn"
-
-  .row-fluid
-    .span12
-      #delete-student
-        = link_to_modal_delete nil, :id => 'delete-student-link', :class => 'btn btn-danger pull-right', :data => {:confirm => nil}
+    .span2#delete-student
+      = link_to_modal_delete nil, :id => 'delete-student-link', :class => 'btn btn-danger pull-right', :data => {:confirm => nil}
     .delete_modal
-      =render 'delete_modal', :student => @student
-  .row-fluid
-    .span
-      =link_to 'Generate Report', student_path(@student, :format => :pdf), :class => 'btn-primary btn'
+      = render 'delete_modal', :student => @student
+
 
 coffee:
   $('#delete-student-link').on 'click', (event) ->
