--- a/core/app/views/gaku/shared/student/_show.html.slim
+++ b/core/app/views/gaku/shared/student/_show.html.slim
@@ -11,3 +11,5 @@
   = well_div do
     .span4
       = link_to_back students_path, :class => "span12 btn"
+    .span4
+      = link_to 'Generate Report', student_path(@student, :format => :pdf), :class => 'span12 btn'
