--- a/core/app/views/gaku/exams/exam_portions/_exam_portion_weight_td.html.slim
+++ b/core/app/views/gaku/exams/exam_portions/_exam_portion_weight_td.html.slim
@@ -1,3 +1,3 @@
 td*{'data-id' =>portion.id}
   =form_for [@exam, portion], :remote => true do |f|
-    =f.number_field :weight, :data => {:index => portion_counter}, :class => 'exam-portion-weight'
+    =f.number_field :weight, :class => 'exam-portion-weight', :min => 0, :max => 100
