--- a/core/app/views/gaku/exams/exam_portions/create.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/create.js.erb
@@ -16,7 +16,24 @@ $('.exam-exam-portions-count').html("<%= print_count(@count+1, t_exam_portion_li
 
   $('.exam-portions-weight thead tr').append('<th class="btn-warning" data-id=<%= @exam.exam_portions.last.id%>> <%= @exam.exam_portions.last.name+ " " + t("exam.weight") %> </th>')
   $('.exam-portions-weight tbody tr').append('<%= render_js_partial("gaku/exams/exam_portions/exam_portion_weight_td", {:portion => @exam.exam_portions.last}) %>')
-  var total = $('#weight-total').text();
-  var totalFl = parseFloat(total)+ <%= @exam.exam_portions.last.weight.to_f %>;
-  $("#weight-total").html(totalFl);
 <% end %>
+
+weights = ('<%= @exam.exam_portions.pluck(:weight) %>')
+weights = weights.slice(1, -1).split(',')
+
+$('.exam-portions-weight tbody form').each(function(i, form){
+  $(form).find('input.exam-portion-weight').val(parseFloat(weights[i]))
+})
+
+$('#exam-exam-portions-index tbody tr').each(function(i, tr){
+  tdWeight = $(tr).find('td')[3]
+  $(tdWeight).text(weights[i])
+})
+
+error = '<%= @exam_portion.custom_errors %>'
+
+if(error){
+  $('.exam-portion-error').html('<%= render_js_partial("gaku/exams/exam_portions/custom_exam_portion_error", {:error => @exam_portion.custom_errors}) %>')
+}else{
+  $('.exam-portion-error').html('');
+}
