Add primary_address, primary_contact, image upload to guardian view

--- a/core/app/views/gaku/shared/student/_edit_table.html.slim
+++ b/core/app/views/gaku/shared/student/_edit_table.html.slim
@@ -3,7 +3,7 @@
 
     caption
       h2
-        = link_to edit_person_caption(student), [:edit, @student], :remote => true, :class => 'edit-link'
+        = link_to edit_person_caption(student), [:edit, @student], :remote => true
 
     tbody
       tr
