--- a/core/app/views/gaku/admin/schools/edit_master.html.slim
+++ b/core/app/views/gaku/admin/schools/edit_master.html.slim
@@ -1,11 +1,10 @@
-= form_for [:admin, @master_school] do |f|
-  b= t(:'school.edit_master')
-  .row-fluid.mt-l
-    .span12.well
-      .span12.well
-        = render 'school_form_fields', :f => f
-        .row-fluid
-          .span12
-            .span6
-              = submit_button t(:'school.save'), :id => 'submit-admin-school-button'
-            = link_to_back admin_school_details_path , :id => 'back-admin-school-link', :class => 'btn span3'
+= content_for :show_header do
+  = t(:'school.edit_master')
+
+= normal_form_for [:admin, @master_school] do |f|
+  = render 'form_fields', :f => f
+  .row-fluid
+    .span12
+      = submit_button t(:'school.save'), :id => 'submit-admin-school-button'
+      .span6
+        = link_to_back admin_school_details_path , :id => 'back-admin-school-link', :class => 'btn span12'
