Use contact_widget and address_widget from modules instead of presenters

--- a/core/app/views/gaku/shared/student/_show_table.html.slim
+++ b/core/app/views/gaku/shared/student/_show_table.html.slim
@@ -14,11 +14,11 @@
 
       tr
         th = t(:'contact.primary')
-        td = student_presenter.primary_contact
+        td = student.contact_widget
 
       tr
         th = t(:'address.primary')
-        td = student_presenter.primary_address
+        td = student.address_widget
 
       tr
         th = t(:'admitted')
