--- a/core/app/views/gaku/students/guardians/_show_table.html.slim
+++ b/core/app/views/gaku/students/guardians/_show_table.html.slim
@@ -2,11 +2,11 @@
 
 tr
   th = t(:'contact.primary')
-  td = guardian.contact_widget
+  td#contact_widget = guardian.contact_widget
 
 tr
   th = t(:'address.primary')
-  td = guardian.address_widget
+  td#address_widget = guardian.address_widget
 
 tr
   th = t(:'guardian.relationship')
