Fix some visual bugs

--- a/core/app/views/gaku/exams/exam_portions/_show_table.html.slim
+++ b/core/app/views/gaku/exams/exam_portions/_show_table.html.slim
@@ -6,6 +6,7 @@
       = th t(:'exam_portion.max_score')
       = th t(:'exam_portion.weight')
       = th t(:'exam_portion.problem_count')
+      = th t(:'exam_portion.attached_file_count')
       = th_actions 3
   tbody
     = render 'gaku/exams/exam_portions/exam_portion', :exam_portion => @exam_portion
