Use slide() instead of slideToggle()

--- a/admissions/app/views/gaku/admin/admission_methods/admission_phases/create.js.erb
+++ b/admissions/app/views/gaku/admin/admission_methods/admission_phases/create.js.erb
@@ -1,6 +1,6 @@
 $('#admin-admission-method-admission-phases-index tbody').append('<%= render_js_partial("admission_phase", {:admission_phase => @admission_phase}) %>');
 
-$('#new-admin-admission-method-admission-phase').slideToggle();
+$('#new-admin-admission-method-admission-phase').slide();
 $('#new-admin-admission-method-admission-phase-link').show();
 
 showNotice("<%= render_flash %>");
