--- a/admissions/app/views/gaku/admin/admissions/create.js.erb
+++ b/admissions/app/views/gaku/admin/admissions/create.js.erb
@@ -1,4 +1,4 @@
-$('#new-admin-admission').slideToggle();
+$('#new-admin-admission').slide();
 $('#new-admin-admission-link').show();
 
 showNotice("<%= render_flash %>");
