--- a/core/app/views/gaku/addresses/create.js.erb
+++ b/core/app/views/gaku/addresses/create.js.erb
@@ -2,7 +2,7 @@
 $("#student-addresses-tab-link").html("<%= print_count(@count+1, t_address_plural) %>");
 
 $('#<%= @resource_name.pluralize %>-index tbody').append('<%= render_js_partial("address", {:address => @address}) %>');
-$('#new-<%= @resource_name %>').slideToggle();
+$('#new-<%= @resource_name %>').slide();
 $('#new-<%= @resource_name %> form')[0].reset();
 $('#new-<%= @resource_name %>-link').show();
 
