--- a/core/app/views/gaku/admin/attendance_types/new.js.erb
+++ b/core/app/views/gaku/admin/attendance_types/new.js.erb
@@ -1,4 +1,4 @@
-$('#new-admin-attendance-type').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-admin-attendance-type').html('<%= render_js_partial("form") %>').slide();
 $('#new-admin-attendance-type #attendance_type_color_code').miniColors()
 $('#new-admin-attendance-type-link').hide();
 $('.remote-form').enableValidations();
