--- a/core/app/views/gaku/admin/contact_types/create.js.erb
+++ b/core/app/views/gaku/admin/contact_types/create.js.erb
@@ -1,6 +1,6 @@
 $('#admin-contact-types-index tbody').append('<%= render_js_partial("contact_type", {:contact_type => @contact_type}) %>');
 
-$('#new-admin-contact-type').slideToggle();
+$('#new-admin-contact-type').slide();
 $('#new-admin-contact-type-link').show();
 
 showNotice("<%= render_flash %>");
