--- a/core/app/views/gaku/admin/contact_types/new.js.erb
+++ b/core/app/views/gaku/admin/contact_types/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-admin-contact-type').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-admin-contact-type').html('<%= render_js_partial("form") %>').slide();
 $('#new-admin-contact-type-link').hide();
 $('.remote-form').enableValidations();
