--- a/core/app/views/gaku/admin/specialties/create.js.erb
+++ b/core/app/views/gaku/admin/specialties/create.js.erb
@@ -1,6 +1,6 @@
 $('#admin-specialties-index tbody').append('<%= render_js_partial("specialty", {:specialty => @specialty}) %>');
 
-$('#new-admin-specialty').slideToggle();
+$('#new-admin-specialty').slide();
 $('#new-admin-specialty-link').show();
 
 showNotice("<%= render_flash %>");
