--- a/core/app/views/gaku/contacts/create.js.erb
+++ b/core/app/views/gaku/contacts/create.js.erb
@@ -1,6 +1,6 @@
 $('#<%= @resource_name.pluralize %>-index tbody').append('<%= render_js_partial("contact", {:contact => @contact}) %>');
 $("#new-<%= @resource_name %>-link").show();
-$('#new-<%= @resource_name %>').slideToggle();
+$('#new-<%= @resource_name %>').slide();
 showNotice("<%= render_flash %>");
 
 $('.<%= @resource_name.pluralize %>-count').html("<%= print_count(@count+1, t_contact_list) %>");
