--- a/core/app/views/gaku/course_groups/new.js.erb
+++ b/core/app/views/gaku/course_groups/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-course-group').html('<%= render_js_partial("form") %>').slideDown()
+$('#new-course-group').html('<%= render_js_partial("form") %>').slide()
 $('#new-course-group-link').hide();
 $('.remote-form').enableValidations();
