--- a/core/app/views/gaku/courses/enrollments/class_groups/new.js.erb
+++ b/core/app/views/gaku/courses/enrollments/class_groups/new.js.erb
@@ -1,4 +1,4 @@
 $('#new-course-student-form').hide()
 $('#new-course-student-link').show()
 $('#new-course-class-group-link').hide()
-$('#new-course-class-group').slideToggle()
+$('#new-course-class-group').slide()
