--- a/core/app/views/gaku/exams/exam_portions/create.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/create.js.erb
@@ -1,4 +1,4 @@
-$('#new-exam-exam-portion').slideToggle();
+$('#new-exam-exam-portion').slide();
 $('#new-exam-exam-portion-link').show();
 showNotice("<%= render_flash %>");
 
