--- a/core/app/views/gaku/extracurricular_activities/new.js.erb
+++ b/core/app/views/gaku/extracurricular_activities/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-extracurricular-activity').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-extracurricular-activity').html('<%= render_js_partial("form") %>').slide();
 $('#new-extracurricular-activity-link').hide();
 $('.remote-form').enableValidations();
