--- a/core/app/views/gaku/students/simple_grades/create.js.erb
+++ b/core/app/views/gaku/students/simple_grades/create.js.erb
@@ -4,7 +4,7 @@ $('#student-simple-grades-list a').text('<%= escape_javascript(simple_grades_sho
 
 showNotice("<%= render_flash %>");
 
-$('#new-student-simple-grade').slideToggle()
+$('#new-student-simple-grade').slide()
 $('#new-student-simple-grade-link').show();
 
 $('.remote-form').enableValidations();
