--- a/core/app/views/gaku/students/student_achievements/create.js.erb
+++ b/core/app/views/gaku/students/student_achievements/create.js.erb
@@ -4,7 +4,7 @@ $('#student-achievements-list a').text('<%= escape_javascript(achievements_show(
 
 showNotice("<%= render_flash %>");
 
-$('#new-student-achievement').slideToggle()
+$('#new-student-achievement').slide()
 $('#new-student-achievement-link').show();
 
 $('.remote-form').enableValidations();
