--- a/core/app/views/gaku/students/student_specialties/create.js.erb
+++ b/core/app/views/gaku/students/student_specialties/create.js.erb
@@ -5,7 +5,7 @@ $('#student-specialty-list a').text("<%= student_specialties_list(@student.stude
 
 showNotice("<%= render_flash %>");
 
-$('#new-student-specialty').slideToggle()
+$('#new-student-specialty').slide()
 $('#new-student-specialty-link').show();
 
 $('.remote-form').enableValidations();
