--- a/core/app/views/gaku/syllabuses/assignments/create.js.erb
+++ b/core/app/views/gaku/syllabuses/assignments/create.js.erb
@@ -1,4 +1,4 @@
-$('#new-syllabus-assignment-form').slideToggle();
+$('#new-syllabus-assignment-form').slide();
 $('#new-syllabus-assignment-form form').each (function(){
   this.reset();
 });
