--- a/core/app/views/gaku/syllabuses/create.js.erb
+++ b/core/app/views/gaku/syllabuses/create.js.erb
@@ -1,6 +1,6 @@
 $('table#syllabuses-index tbody').append('<%= render_js_partial("syllabus", {:syllabus => @syllabus}) %>');
 $('#new-syllabus form')[0].reset();
-$('#new-syllabus').slideToggle();
+$('#new-syllabus').slide();
 $('#new-syllabus-link').show();
 $('.syllabuses-count').html('<%= print_count(@count+1, t_syllabus_list) %>');
 showNotice("<%= render_flash %>");
