--- a/core/app/views/gaku/syllabuses/exams/create.js.erb
+++ b/core/app/views/gaku/syllabuses/exams/create.js.erb
@@ -1,4 +1,4 @@
-$('#new-syllabus-exam').slideToggle();
+$('#new-syllabus-exam').slide();
 $('#new-syllabus-exam-link').show()
 $('#new-syllabus-exam form').each (function(){
   this.reset();
