--- a/admissions/app/views/gaku/admin/admissions/soft_delete.js.erb
+++ b/admissions/app/views/gaku/admin/admissions/soft_delete.js.erb
@@ -1,2 +1,2 @@
 $('#delete-modal').modal('hide');
-$('table#admissions-index tr#admission-<%= @admission.id.to_s %>').slideUp();
+$('table#admissions-index tr#admission-<%= @admission.id.to_s %>').slide();
