--- a/core/app/views/gaku/admin/attendance_types/create.js.erb
+++ b/core/app/views/gaku/admin/attendance_types/create.js.erb
@@ -1,6 +1,6 @@
 $('#admin-attendance-types-index tbody').append('<%= render_js_partial("attendance_type", {:attendance_type => @attendance_type}) %>');
 
-$('#new-admin-attendance-type').slideToggle();
+$('#new-admin-attendance-type').slide();
 $('#new-admin-attendance-type-link').show();
 
 $('.admin-attendance-types-count').html('<%= print_count(@count+1, t_attendance_type_list) %>');
