--- a/core/app/views/gaku/admin/grading_methods/new.js.erb
+++ b/core/app/views/gaku/admin/grading_methods/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-admin-grading-method').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-admin-grading-method').html('<%= render_js_partial("form") %>').slide();
 $('#new-admin-grading-method-link').hide();
 $('.remote-form').enableValidations();
