--- a/core/app/views/gaku/admin/roles/create.js.erb
+++ b/core/app/views/gaku/admin/roles/create.js.erb
@@ -1,6 +1,6 @@
 $('#admin-roles-index tbody').append('<%= render_js_partial("role", {:role => @role}) %>');
 
-$('#new-admin-role').slideToggle();
+$('#new-admin-role').slide();
 $('#new-admin-role-link').show();
 
 $('.admin-roles-count').html('<%= print_count(@count+1, t_role_list) %>');
