--- a/core/app/views/gaku/admin/roles/new.js.erb
+++ b/core/app/views/gaku/admin/roles/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-admin-role').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-admin-role').html('<%= render_js_partial("form") %>').slide();
 $('#new-admin-role-link').hide();
 $('.remote-form').enableValidations();
