--- a/core/app/views/gaku/admin/schools/campuses/addresses/new.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/addresses/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-admin-school-campus-address').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-admin-school-campus-address').html('<%= render_js_partial("form") %>').slide();
 $('#new-admin-school-campus-address-link').hide();
 $('.remote-form').enableValidations();
