--- a/core/app/views/gaku/admin/schools/campuses/create.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/create.js.erb
@@ -1,6 +1,6 @@
 $('#admin-school-campuses-index tbody').append('<%= render_js_partial("campus", {:campus => @campus}) %>');
 
-$('#new-admin-school-campus').slideToggle();
+$('#new-admin-school-campus').slide();
 $('#new-admin-school-campus-link').show();
 
 $('.admin-school-campuses-count').html('<%= print_count(@count+1, t_campus_list) %>');
