--- a/core/app/views/gaku/admin/schools/create.js.erb
+++ b/core/app/views/gaku/admin/schools/create.js.erb
@@ -1,6 +1,6 @@
 $('#admin-schools-index tbody').append('<%= render_js_partial("school", {:school => @school}) %>');
 
-$('#new-admin-school').slideToggle();
+$('#new-admin-school').slide();
 $('#new-admin-school-link').show();
 
 showNotice("<%= render_flash %>");
