--- a/core/app/views/gaku/class_groups/courses/create.js.erb
+++ b/core/app/views/gaku/class_groups/courses/create.js.erb
@@ -1,4 +1,4 @@
-$('#new-class-group-course').slideToggle();
+$('#new-class-group-course').slide();
 $('#new-class-group-course-link').show();
 
 $('#class-group-courses-index tbody').append('<%= render_js_partial("course", {:enrollment => @class_group_course_enrollment}) %>');
