--- a/core/app/views/gaku/class_groups/courses/new.js.erb
+++ b/core/app/views/gaku/class_groups/courses/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-class-group-course').slideToggle();
+$('#new-class-group-course').slide();
 $('#new-class-group-course-link').hide();
 $('.remote-form').enableValidations();
