--- a/core/app/views/gaku/class_groups/new.js.erb
+++ b/core/app/views/gaku/class_groups/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-class-group').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-class-group').html('<%= render_js_partial("form") %>').slide();
 $('#new-class-group-link').hide();
 $('.remote-form').enableValidations();
