--- a/core/app/views/gaku/class_groups/semesters/create.js.erb
+++ b/core/app/views/gaku/class_groups/semesters/create.js.erb
@@ -3,7 +3,7 @@ showNotice("<%= render_flash %>");
 	$('#new-class-group-semester-form-errors').html('<%= render_js_partial("gaku/shared/errors", {:target => @semester}) %>');
 <%- else %>
   $('#class-group-semesters-index tbody').append('<%= render_js_partial("semester", {:semester => @semester}) %>');
-	$('#new-class-group-semester').slideToggle();
+	$('#new-class-group-semester').slide();
 	$('#new-class-group-semester-form-errors').html('');
   $('#new-class-group-semester-link').show();
   $('#class-group-semesters-tab-link').html("<%= print_count(@count+1, t_semester_plural) %>");
