--- a/core/app/views/gaku/course_groups/course_group_enrollments/create.js.erb
+++ b/core/app/views/gaku/course_groups/course_group_enrollments/create.js.erb
@@ -1,5 +1,5 @@
 $("#new-course-group-enrollment-link").show();
-$("#new-course-group-enrollment").slideToggle();
+$("#new-course-group-enrollment").slide();
 $('#course-group-enrollment-form-errors').html('');
 $('#course-group-enrollments-index tbody').append('<%= render_js_partial("course", {:enrollment => @course_group_enrollment}) %>');
 $('.course-group-enrollments-count').html('<%= print_count(@count+1, t_course_list) %>');
