--- a/core/app/views/gaku/course_groups/course_group_enrollments/new.js.erb
+++ b/core/app/views/gaku/course_groups/course_group_enrollments/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-course-group-enrollment').slideToggle();
+$('#new-course-group-enrollment').slide();
 $('#new-course-group-enrollment-link').hide();
 $('.remote-form').enableValidations();
