--- a/core/app/views/gaku/courses/enrollments/class_groups/enroll.js.erb
+++ b/core/app/views/gaku/courses/enrollments/class_groups/enroll.js.erb
@@ -8,7 +8,7 @@
   <% } %>
 
   $('#new-course-class-group-link').show();
-  $('#new-course-class-group').slideToggle();
+  $('#new-course-class-group').slide();
 
   $('#new-course-enrollment-tab-link').html('<%= print_count(@course.students.count, t_student_plural) %>');
   $('.course-students-count').html('<%= print_count(@course.students.count, t_student_list) %>');
