--- a/core/app/views/gaku/courses/new.js.erb
+++ b/core/app/views/gaku/courses/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-course').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-course').html('<%= render_js_partial("form") %>').slide();
 $('#new-course-link').hide();
 $('.remote-form').enableValidations();
