--- a/core/app/views/gaku/exams/create.js.erb
+++ b/core/app/views/gaku/exams/create.js.erb
@@ -2,5 +2,5 @@ $('#exams-index tbody').append('<%= render_js_partial("exam", {:exam => @exam}) 
 $('.exams-count').html('<%= print_count(@count+1, t_exam_list) %>');
 
 showNotice("<%= render_flash %>");
-$('#new-exam').slideToggle()
+$('#new-exam').slide()
 $('#new-exam-link').show()
