--- a/core/app/views/gaku/exams/exam_portions/attachments/new.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/attachments/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-exam-exam-portion-attachment').html('<%= render_js_partial("form") %>').slideToggle()
+$('#new-exam-exam-portion-attachment').html('<%= render_js_partial("form") %>').slide()
 $('#new-exam-exam-portion-attachment-link').hide();
 $('.remote-form').enableValidations();
