--- a/core/app/views/gaku/exams/exam_portions/new.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-exam-exam-portion').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-exam-exam-portion').html('<%= render_js_partial("form") %>').slide();
 $('#new-exam-exam-portion-link').hide();
 $('.remote-form').enableValidations();
