--- a/core/app/views/gaku/exams/new.js.erb
+++ b/core/app/views/gaku/exams/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-exam').html('<%= render_js_partial("form") %>').slideToggle();
+$('#new-exam').html('<%= render_js_partial("form") %>').slide();
 $('#new-exam-link').hide();
 $('.remote-form').enableValidations();
