--- a/core/app/views/gaku/students/course_enrollments/create.js.erb
+++ b/core/app/views/gaku/students/course_enrollments/create.js.erb
@@ -1,7 +1,7 @@
 $('#student-course-enrollments-index tbody').append('<%= render_js_partial("course_enrollment", {:course => @student.courses.last}) %>');
 
 $('#new-student-course-enrollment form select').val('');
-$('#new-student-course-enrollment').slideToggle();
+$('#new-student-course-enrollment').slide();
 $('#new-student-course-enrollment-link').show();
 
 showNotice("<%= render_flash %>");
