--- a/core/app/views/gaku/students/guardians/new.js.erb
+++ b/core/app/views/gaku/students/guardians/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-student-guardian').html('<%= render_js_partial("form") %>').slideToggle();
+$('#new-student-guardian').html('<%= render_js_partial("form") %>').slide();
 $('#new-student-guardian-link').hide();
 $('.remote-form').enableValidations();
