--- a/core/app/views/gaku/students/simple_grades/new.js.erb
+++ b/core/app/views/gaku/students/simple_grades/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-student-simple-grade').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-student-simple-grade').html('<%= render_js_partial("form") %>').slide();
 $('.remote-form').enableValidations();
 $('#new-student-simple-grade-link').hide();
