--- a/core/app/views/gaku/students/student_achievements/new.js.erb
+++ b/core/app/views/gaku/students/student_achievements/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-student-achievement').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-student-achievement').html('<%= render_js_partial("form") %>').slide();
 $('.remote-form').enableValidations();
 $('#new-student-achievement-link').hide();
