--- a/core/app/views/gaku/students/student_specialties/new.js.erb
+++ b/core/app/views/gaku/students/student_specialties/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-student-specialty').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-student-specialty').html('<%= render_js_partial("form") %>').slide();
 $('.remote-form').enableValidations();
 $('#new-student-specialty-link').hide();
