--- a/core/app/views/gaku/syllabuses/exam_syllabuses/create.js.erb
+++ b/core/app/views/gaku/syllabuses/exam_syllabuses/create.js.erb
@@ -2,7 +2,7 @@
 	$('#new-existing-exam-errors').html('<%= render_js_partial("gaku/shared/errors", {:target => @exam_syllabus}) %>');
 <%- else %>
 	$('#new-existing-exam').html('<%= render_js_partial("gaku/syllabuses/exams/select_form", {:syllabus => @syllabus}) %>');
-	$('#new-existing-exam').slideToggle();
+	$('#new-existing-exam').slide();
 	$('#new-existing-exam-link').show()
 
 	$('.exams-count').html('<%= print_count(@count, t_exam_list) %>');
