--- a/core/app/views/gaku/syllabuses/new.js.erb
+++ b/core/app/views/gaku/syllabuses/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-syllabus').html('<%= render_js_partial("form") %>').slideToggle();
+$('#new-syllabus').html('<%= render_js_partial("form") %>').slide();
 $('#new-syllabus-link').hide();
 $('.remote-form').enableValidations();
