--- a/core/app/views/gaku/teachers/new.js.erb
+++ b/core/app/views/gaku/teachers/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-teacher').html('<%= render_js_partial("form") %>').slideToggle();
+$('#new-teacher').html('<%= render_js_partial("form") %>').slide();
 $('#new-teacher-link').hide();
 $('.remote-form').enableValidations();
