--- a/core/app/views/gaku/attachments/soft_delete.js.erb
+++ b/core/app/views/gaku/attachments/soft_delete.js.erb
@@ -1,3 +1,3 @@
 showNotice("<%= render_flash %>");
 // To be fixed
-$('.exam-exam-portion-attachment-count').html("<%= print_count(@attachment.attachable.attachments.count, t_contact_list) %>");
+$('.exam-exam-portion-attachments-count').html("<%= print_count(@attachment.attachable.attachments.count, t_attachment_list) %>");
