[views] Fix layouts

--- a/core/app/views/gaku/layouts/gaku.html.slim
+++ b/core/app/views/gaku/layouts/gaku.html.slim
@@ -16,6 +16,7 @@ html
           = render "gaku/shared/flash", :flash => flash
       #errors
       #modal-dialogs
-      = content_for?(:content) ? yield(:content) : yield
 
-
+      .row-fluid
+        .span12
+          = content_for?(:content) ? yield(:content) : yield
